<resources>
    <string name="app_name">PearTrees Notes</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="idea_checkbox">Idea</string>
    <string name="important_checkbox">Important</string>
    <string name="Todo_checkbox">To Do</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="toast_long">The text must be less than 240 characters</string>

    <string name="sound_checkbox">On or Off</string>
    <string name="settings_title">Settings</string>
    <string name="sound_title">Sound</string>
    <string name="animations_title">Animation Speed</string>
    <string name="rb_fast">Fast</string>
    <string name="rb_slow">Slow</string>
    <string name="rb_none">None</string>
    <string name="description_size">The description cannot exceed 140 characters</string>
    <string name="title_empty">You must enter a title</string>
    <string name="title_size">The title must be less than 30 characters.</string>
    <string name="delete_note_text">Are you sure to delete this note?</string>



</resources>
